# trust-wallet-core

./: .gitattributes  .gitignore  CMakeLists.txt  LICENSE  README.md  TrustWalletCore.podspec  bootstrap.sh
JNI/cpp/: PrivateKey.c  PrivateKey.h
Sources/: TWData.h  TWPrivateKey.c  TWPrivateKey.h
Swift/: PrivateKey.swift  TrustWalletCore.h
Swift/TrustWalletCore.xcodeproj/: project.pbxproj
codegen/lib/: code_generator.rb  entity_decl.rb  enum_decl.rb  function_decl.rb  java.rb  java_helper.rb  jni.rb  jni_helper.rb  parser.rb  swift.rb  swift_helper.rb  type_decl.rb
codegen/test/: test_parser.rb
docs/: Contributing.md
include/TrustWalletCore/: TWBase.h  TWBase58.h  TWBech32Address.h  TWBinanceSigner.h  TWBitcoin.h  TWBitcoinAddress.h  TWBitcoinCashAddress.h  TWBitcoinOpCodes.h  TWBitcoinOutPoint.h  TWBitcoinScript.h  TWBitcoinSigningProvider.h  TWBitcoinTransaction.h  TWBitcoinTransactionInput.h  TWBitcoinTransactionOutput.h  TWBitcoinTransactionSigner.h  TWBitcoinUnspentTransaction.h  TWCoinType.h  TWCoinTypeConfiguration.h  TWData.h  TWHDVersion.h  TWHDWallet.h  TWHRP.h  TWHash.h  TWHex.h  TWP2PKHPrefix.h  TWP2SHPrefix.h  TWPrivateKey.h  TWProto.h  TWPublicKey.h  TWPurpose.h  TWSLIP.h  TWString.h  TWTendermintAddress.h  TWTronProto.h  TWUInt256.h  TWZcashTransaction.h
jni/: CMakeLists.txt
jni/cpp/: AES.c  AES.h  Base58.c  Base58.h  Bech32Address.c  Bech32Address.h  BinanceSigner.c  BinanceSigner.h  BitcoinAddress.c  BitcoinAddress.h  BitcoinCashAddress.c  BitcoinCashAddress.h  BitcoinOutPoint.c  BitcoinOutPoint.h  BitcoinScript.c  BitcoinScript.h  BitcoinSigningProvider.c  BitcoinSigningProvider.h  BitcoinTransaction.c  BitcoinTransaction.h  BitcoinTransactionInput.c  BitcoinTransactionInput.h  BitcoinTransactionOutput.c  BitcoinTransactionOutput.h  BitcoinTransactionSigner.c  BitcoinTransactionSigner.h  BitcoinUnspentTransaction.c  BitcoinUnspentTransaction.h  CoinTypeConfiguration.c  CoinTypeConfiguration.h  HDWallet.c  HDWallet.h  Hash.c  Hash.h  KeyDerivation.c  KeyDerivation.h  PrivateKey.c  PrivateKey.h  PublicKey.c  PublicKey.h  (+14 more)
js/: package.json
js/proto/: TrustWalletCore.d.ts  TrustWalletCore.js  binancecanceltradeorder.js  binancesendorder.js  binancesignature.js  binancesigninginput.js  binancetokenfreezeorder.js  binancetokenunfreezeorder.js  binancetradeorder.js  binancetransaction.js  bitcoinoutpoint.js  bitcoinsigninginput.js  bitcoinsigningoutput.js  bitcointransaction.js  bitcointransactioninput.js  bitcointransactionoutput.js  bitcoinunspenttransaction.js  result.js
protobuf-plugin/: CMakeLists.txt  main.cc
src/: Bech32.h  HDWallet.cpp  Hash.cpp  Hash.h  HexCoding.cpp  HexCoding.h  PrivateKey.cpp  PrivateKey.h  PublicKey.cpp  PublicKey.h  Result.h  TWData+Hex.c  TWData.c  TWData.cpp  TWHDWallet.cpp  TWHash.c  TWHash.cpp  TWPrivateKey.c  TWPrivateKey.cpp  TWPublicKey.c  TWString.c  TWUInt256.c  TrustWalletCore.pb.cc  TrustWalletCore.pb.h  TrustWalletCore.proto  UInt256.cpp  UInt256.h
src/Binance/: Address.cpp  Address.h  Serialization.cpp  Serialization.h  Signer.cpp  Signer.h
src/Bitcoin/: Address.cpp  Address.h  Bech32Address.cpp  Bech32Address.h  CashAddress.cpp  CashAddress.h  OutPoint.cpp  OutPoint.h  Script.cpp  Script.h  SigningProvider.h  TWBech32Address.cpp  TWBinaryCoding.h  TWBitcoinAddress.cpp  TWBitcoinOutPoint.cpp  TWBitcoinScript.cpp  TWBitcoinSigningProvider.cpp  TWBitcoinSigningProvider_Internal.h  TWBitcoinTransaction.cpp  TWBitcoinTransactionInput.cpp  TWBitcoinTransactionOutput.cpp  TWBitcoinTransactionSigner.cpp  TWBitcoinTransaction_Internal.h  TWBitcoinUnspentTransaction.cpp  TWBitcoinUnspentTransaction_Internal.h  TWCoinTypeConfiguration.cpp  Transaction.cpp  Transaction.h  TransactionBuilder.h  TransactionInput.cpp  TransactionInput.h  TransactionOutput.cpp  TransactionOutput.h  TransactionPlan.h  TransactionSigner.cpp  TransactionSigner.h  UnspentSelector.cpp  UnspentSelector.h  UnspentTransaction.h
src/Ethereum/: RLP.cpp
src/Stellar/: Stellar.cpp  Stellar.h  constants.h
src/Zcash/: TWZcashTransaction.cpp  Transaction.cpp  Transaction.h
src/interface/: TWBase58.cpp  TWHDWallet.cpp  TWHash.cpp  TWPrivateKey.cpp  TWPublicKey.cpp  TWString+Hex.c  TWUInt256.c
src/proto/: Binance.proto  Bitcoin.proto  Tron.proto
swift/: .gitignore  PrivateKey.swift  TrustWalletCore.h
swift/Sources/: AES.swift  Base58.swift  Bech32Address.swift  Binance.pb.swift  BinanceSigner.swift  Bitcoin.pb.swift  BitcoinAddress.swift  BitcoinCashAddress.swift  BitcoinOutPoint.swift  (+32 more)
tests/: BinanceSignerTests.cpp  CMakeLists.txt  TWBech32AddressTests.cpp  TWBitcoinCashTests.cpp  TWBitcoinScriptTests.cpp  TWBitcoinSigningTests.cpp  TWBitcoinTransactionTests.cpp  TWCPPData.cpp  TWCPPString.cpp  TWCoinTypeConfigTests.cpp  TWDataTests.cpp  TWHDWalletTests.cpp  TWLitecoinTests.cpp  TWPrivateKeyTests.cpp  TWPublicKeyTests.cpp  TWStringTests.cpp  TWTestUtilities.h  TWUInt256Tests.cpp  TWZCoinTests.cpp  TWZcashTests.cpp  TWZcashTransactionTests.cpp  Uint256Tests.cpp  UnspentSelectorTests.cpp
tests/Binance/: AddressTests.cpp  SignerTests.cpp
tests/Bitcoin/: Bech32AddressTests.cpp  UnspentSelectorTests.cpp
tests/Stellar/: TransactionTests.cpp
tools/: android-test  generate-files  ios-build  ios-release
trezor-crypto/: CMakeLists.txt  bench  groestl_internal.h  main.c
trezor-crypto/include/TrezorCrypto/: TrezorCrypto.h  address.h  aes.h  base58.h  bignum.h  bip32.h  bip39.h  blake2b.h  cash_addr.h  chacha20poly1305.h  curves.h  ecdsa.h  ed25519-donna.h  ed25519.h  groestl.h  hasher.h  hmac.h  monero.h  nem.h  nist256p1.h  pbkdf2.h  secp256k1.h  segwit_addr.h  sha3.h
trezor-crypto/include/TrezorCrypto/ed25519-donna/: ed25519-donna-impl-base.h
trezor-crypto/src/: address.c  base58.c  bignum.c  bip32.c  bip39.c  blake2b.c  cash_addr.c  curves.c  ecdsa.c  groestl.c  groestl_internal.h  hasher.c  hmac.c  options.h  rand.c  rfc6979.c  segwit_addr.c  sha3.c
trezor-crypto/src/ed25519-donna/: ed25519-donna-impl-base.c  ed25519.c
trezor-crypto/src/monero/: base58.h
trezor-crypto/tests/: test_check.c  test_openssl.c  test_speed.c
(+152 files in other folders)
